Bakup-Filename with unix timestamp and project url in addon config

--- a/flashcc2531/config.json
+++ b/flashcc2531/config.json
@@ -1,8 +1,9 @@
 {
   "name": "flashcc2531",
-  "version": "12",
+  "version": "13",
   "slug": "flashcc2531",
   "description": "Flash Zigbee USBStick CC2531",
+  "url":"https://github.com/imthemichi/hassio-flashcc2531",
   "arch": ["armhf", "armv7", "aarch64"],
   "startup": "before",
   "boot": "manual",
