changed compressio p7zip as isues decompressing

--- a/flashcc2531/Dockerfile
+++ b/flashcc2531/Dockerfile
@@ -4,7 +4,7 @@ FROM $BUILD_FROM
 ENV LANG C.UTF-8
 
 # Install requirements for add-on
-RUN apk add --no-cache git make g++ wiringpi-dev grep wget unzip
+RUN apk add --no-cache git make g++ wiringpi-dev grep wget p7zip
 
 RUN git clone https://github.com/jmichault/flash_cc2531.git && \
               cd flash_cc2531 && \
