New Version because of pull request and Issue 2
Maybe it does not work :-)

--- a/flashcc2531/config.json
+++ b/flashcc2531/config.json
@@ -1,15 +1,15 @@
 {
   "name": "flashcc2531",
-  "version": "13",
+  "version": "14",
   "slug": "flashcc2531",
   "description": "Flash Zigbee USBStick CC2531",
   "url":"https://github.com/imthemichi/hassio-flashcc2531",
   "arch": ["armhf", "armv7", "aarch64"],
-  "startup": "before",
+  "startup": "once",
   "boot": "manual",
   "options": {},
   "map": ["backup:rw"],
-  "devices": ["/dev/mem:/dev/mem:rw", "/dev/gpiomem:/dev/gpiomem:rw"],
+  "devices": ["/dev/mem:rw", "/dev/gpiomem:rw"],
   "privileged": ["SYS_RAWIO"],
   "gpio": "true",
   "apparmor": "true",
